# spotify-shared-queue

./: Cargo.toml
src/: main.rs
static/: 404.html  index.html  queue.html
