[package]
name = "sharedqueue"
version = "0.1.0"
authors = ["syn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.8"
rspotify = "0.10.0"
serde = { version = "1.0.117", features = ["derive"] }
tokio = { version = "0.2.22", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
warp = "0.2.5"
